# drf_nextjs_boilerplate

./: .gitignore  docker-compose.yml
.github/workflows/: backend.yaml  build.yaml  frontend.yaml
backend/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
backend/app1/: admin.py  models.py  tests.py  views.py
backend/email_user/: apps.py  models.py
backend/email_user/migrations/: 0001_initial.py
backend/prj/prj/: settings.py  urls.py
backend/prj/prj/settings/: base.py  local.py  local_mysql.py
backend/scripts/: __init__.py  local.py
backend/tests/: test_app1.py
frontend/: jest.config.js  package.json
frontend/.husky/: pre-commit
frontend/__tests__/components/: Example.test.tsx
frontend/src/components/: Example.tsx
mysql/: .env.example  Dockerfile  my.cnf
