[tool.poetry]
name = "boilerplate"
packages = [
    { include = "prj/prj" },
    { include = "app1" },
]
version = "0.1.0"
description = ""
authors = ["makoto tsuyuki <mtsuyuki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
Django = "^4.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
