[tool.poetry]
name = "boilerplate"
packages = [
    { include = "prj/prj" },
    { include = "app1" },
    { include = "scripts" },
]
version = "0.1.0"
description = ""
authors = ["makoto tsuyuki <mtsuyuki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
djoser = "^2.1.0"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
pytest = "^7.1.3"
tox = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.pylint.master]
disable=[
    "C0114",
    "C0115",
    "C0116",
]

[tool.isort]
force_sort_within_sections=true

[tool.poetry.scripts]
local_server = "scripts.local:server"
shell = "scripts.local:shell"
migrate = "scripts.local:migrate"
